Add fake favicon and tweak text

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 
-    <title>Page Garden</title>
+    <title>🌱 Page Garden</title>
   </head>
   <body>
     <div id="root"></div>
