--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    
+    <!-- ~~~~~~~~~~~~~~~ SMS Link Preview ~~~~~~~~~~~~~~~ -->
+    <meta property="og:title" content="Sample Preview" />
+    <meta property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/seedling_1f331.png" />
+    <meta property="og:url" content="http://google.com" />
 
     <title id="tab-title">🌱 Page Garden</title>
   </head>
