Seem to get sms preview meta tags populating correctly

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     
     <!-- ~~~~~~~~~~~~~~~ SMS Link Preview ~~~~~~~~~~~~~~~ -->
-    <meta property="og:title" content="🌱 page.garden" /> -->
-    <meta property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/page-facing-up_1f4c4.png" />
-    <meta property="og:url" content="https://page.garden" />
+    <meta id="sms-title" property="og:title" content="🌱 page.garden" />
+    <meta id="sms-image" property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/page-facing-up_1f4c4.png" />
+    <meta id="sms-url" property="og:url" content="https://page.garden" />
 
     <title id="tab-title">🌱 Page Garden</title>
   </head>
