Get sms preview working maybe

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head id="head">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, user-scalable=no">
@@ -15,7 +15,7 @@
     
     <!-- ~~~~~~~~~~~~~~~ SMS Link Preview ~~~~~~~~~~~~~~~ -->
     <meta id="sms-title" property="og:title" content="🌱 page.garden" />
-    <meta id="sms-image" property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/page-facing-up_1f4c4.png" />
+    <meta id="sms-image" property="og:image" content="" />
     <meta id="sms-url" property="og:url" content="https://page.garden" />
 
     <title id="tab-title">🌱 Page Garden</title>
